# docnav

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Docnav.code-workspace  README.md  docnav.cmd  eslint.config.ts  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.scripts.json
crates/docnav/: Cargo.toml
crates/docnav-adapter-sdk/: Cargo.toml
crates/docnav-adapter-sdk/src/: adapter.rs  boundary.rs  command.rs  constants.rs  direct.rs  direct_args.rs  direct_cli.rs  error.rs  invoke.rs  lib.rs  output.rs  paging.rs  standard_parameters.rs  tests.rs
crates/docnav-adapter-sdk/src/direct/: args.rs  cli.rs  config.rs  mod.rs  native_options.rs  output.rs  warnings.rs
crates/docnav-adapter-sdk/src/direct/args/: boundaries.rs  diagnostics.rs  loose.rs  resolved.rs  sources.rs  spec.rs  standard.rs  tests.rs
crates/docnav-adapter-sdk/src/direct/cli/: commands.rs  help.rs  operation.rs
crates/docnav-adapter-sdk/src/direct/config/: tests.rs
crates/docnav-adapter-sdk/src/direct/output/: tests.rs
crates/docnav-adapter-sdk/src/paging/: tests.rs
crates/docnav-adapter-sdk/src/standard_parameters/: config.rs  native_options.rs  passthrough.rs
crates/docnav-adapter-sdk/src/tests/: boundary.rs  command.rs  common.rs  error.rs  execute.rs  invoke.rs
crates/docnav-adapter-sdk/src/tests/invoke/: native_options.rs
crates/docnav-markdown/: Cargo.toml
crates/docnav-markdown/src/: adapter.rs  cli.rs  lib.rs  main.rs  markdown.rs  paging.rs
crates/docnav-markdown/src/cli/: tests.rs
crates/docnav-markdown/src/markdown/: document.rs  format.rs  options.rs  parse.rs  refs.rs  tests.rs  text.rs
crates/docnav-markdown/src/markdown/refs/: tests.rs
crates/docnav-markdown/src/paging/: tests.rs
crates/docnav-markdown/tests/: adapter.rs  cli.rs
crates/docnav-markdown/tests/adapter/: meta.rs  options_error_display.rs  options_error_invoke_display.rs  outline_ref.rs  paging_find.rs
crates/docnav-markdown/tests/fixtures/cli-smoke/: code-fence.md  deep-headings.md  longform.markdown  no-headings.md  non-utf8.md  normal.md  unicode.md  uppercase.MD  utf8-bom.md
crates/docnav-navigation/: Cargo.toml
crates/docnav-navigation/src/: context.rs  error.rs  lib.rs  parameters.rs  routing.rs  tests.rs
crates/docnav-navigation/src/outline_mode/: config.rs  path_rules.rs
crates/docnav-navigation/src/parameters/: config.rs  fields.rs  input.rs  native_options.rs  values.rs
crates/docnav-navigation/src/parameters/config/: key_registry.rs
crates/docnav-navigation/src/tests/: navigation.rs  support.rs
crates/docnav-navigation/src/tests/navigation/: config_sources.rs  native_options.rs  outline_mode.rs
crates/docnav-output/: Cargo.toml
crates/docnav-output/src/: lib.rs  readable.rs  tests.rs  writer.rs
crates/docnav/src/: adapter_output_contract.rs  adapter_process.rs  cli.rs  config.rs  contract.rs  error.rs  invocation_log.rs  invoke.rs  lib.rs  main.rs  navigation_defaults.rs  output.rs  parameter_catalog.rs  pipeline.rs  process.rs  project.rs  project_context.rs  project_paths.rs  registry.rs  routing.rs  runtime.rs  standard_parameters.rs
crates/docnav/src/adapter_output_contract/: manifest.rs  probe.rs  process_error.rs  protocol_response.rs  tests.rs
crates/docnav/src/cli/: command_model.rs  flags.rs  parser.rs  preflight.rs  types.rs  warning.rs
crates/docnav/src/cli/parser/: adapter_command.rs  argument_helpers.rs  common.rs  config_command.rs  document.rs  native_options.rs  nullary.rs  spec.rs  tests.rs  utility_command.rs
crates/docnav/src/cli/preflight/: tests.rs
crates/docnav/src/config/: commands.rs  doctor.rs  keys.rs  model.rs  store.rs
crates/docnav/src/config/commands/: tests.rs
crates/docnav/src/config/keys/: listing.rs  resolve.rs  update.rs  validation.rs
crates/docnav/src/config/store/: diagnostics.rs  outline.rs  shape.rs  tests.rs  values.rs
crates/docnav/src/invocation_log/: content.rs  event.rs  hash.rs  paths.rs  settings.rs  summary.rs  time.rs  writer.rs
crates/docnav/src/output/: tests.rs
crates/docnav/src/parameter_catalog/: tests.rs
crates/docnav/src/pipeline/: adapter.rs  configuration.rs  document.rs  meta.rs  project.rs
crates/docnav/src/registry/: tests.rs
crates/docnav/src/routing/: candidate.rs  evidence.rs  state.rs  tests.rs
crates/docnav/src/runtime/: tests.rs
crates/docnav/src/runtime/tests/: invocation_logging.rs  linked_adapter.rs  support.rs
crates/docnav/src/standard_parameters/: definitions.rs  diagnostics.rs  tests.rs
crates/shared/cli-config-resolution/: Cargo.toml  README.md
crates/shared/cli-config-resolution-clap/: Cargo.toml  README.md
crates/shared/cli-config-resolution-clap/examples/: resolution_flow.rs
crates/shared/cli-config-resolution-clap/src/: lib.rs  tests.rs
crates/shared/cli-config-resolution-serde/: Cargo.toml  README.md
crates/shared/cli-config-resolution-serde/src/: lib.rs  tests.rs
crates/shared/cli-config-resolution/src/: diagnostics.rs  explain.rs  field.rs  lib.rs  resolution.rs  source.rs  tests.rs  value.rs
crates/shared/cli-config-resolution/src/resolution/: candidate.rs  field.rs  strategy.rs
crates/shared/cli-config-resolution/src/source/: env.rs
crates/shared/cli-config-resolution/tests/: canonical_core.rs
crates/shared/cli-config-resolution/tests/canonical_core/: env.rs  facade.rs  resolution.rs  source.rs  support.rs
crates/shared/navigation/: Cargo.toml
crates/shared/navigation/src/: auto_read.rs  config_source.rs  context.rs  error.rs  execution.rs  lib.rs  model.rs  outline_mode.rs  parameters.rs  protocol.rs  routing.rs
crates/shared/typed-fields/: Cargo.toml  README.md
crates/shared/typed-fields-macros/: Cargo.toml  README.md
crates/shared/typed-fields-macros/src/: derive.rs  lib.rs
crates/shared/typed-fields/src/: field.rs  json.rs  lib.rs  metadata.rs  process_strategy.rs  processing.rs  range.rs  set.rs  tests.rs  validation.rs  value.rs
crates/shared/typed-fields/tests/: canonical_parameters.rs  field_defs_compile.rs  processing_id_compile.rs
(+1624 files in other folders)
