[workspace]
members = [
  "crates/docnav",
  "crates/adapters/markdown",
  "crates/shared/adapter-contracts",
  "crates/shared/cli-args",
  "crates/shared/diagnostics",
  "crates/shared/json-io",
  "crates/shared/navigation",
  "crates/shared/output",
  "crates/shared/protocol",
  "crates/shared/readable",
  "crates/shared/text-cost"
]
exclude = [
  "subrepos/cli-config-resolution/crates/typed-fields",
  "subrepos/cli-config-resolution/crates/typed-fields-macros",
  "subrepos/cli-config-resolution/crates/cli-config-resolution",
  "subrepos/cli-config-resolution/crates/cli-config-resolution-clap",
  "subrepos/cli-config-resolution/crates/cli-config-resolution-serde"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.40", default-features = false, features = ["std", "help", "usage"] }
cli-config-resolution = { path = "subrepos/cli-config-resolution/crates/cli-config-resolution" }
cli-config-resolution-clap = { path = "subrepos/cli-config-resolution/crates/cli-config-resolution-clap" }
cli-config-resolution-serde = { path = "subrepos/cli-config-resolution/crates/cli-config-resolution-serde" }
docnav-protocol = { path = "crates/shared/protocol" }
docnav-adapter-contracts = { path = "crates/shared/adapter-contracts" }
docnav-cli-args = { path = "crates/shared/cli-args" }
docnav-diagnostics = { path = "crates/shared/diagnostics" }
docnav-json-io = { path = "crates/shared/json-io" }
docnav-markdown = { path = "crates/adapters/markdown" }
docnav-navigation = { path = "crates/shared/navigation" }
docnav-output = { path = "crates/shared/output" }
docnav-readable = { path = "crates/shared/readable" }
docnav-text-cost = { path = "crates/shared/text-cost" }
docnav-typed-fields = { path = "subrepos/cli-config-resolution/crates/typed-fields" }
docnav-typed-fields-macros = { path = "subrepos/cli-config-resolution/crates/typed-fields-macros" }
jsonschema = { version = "0.46.5", default-features = false }
pulldown-cmark = "0.13.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiktoken-rs = "0.12.0"
