[package]
name = "docnav-adapter-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
docnav-cli-args.workspace = true
docnav-diagnostics.workspace = true
docnav-output.workspace = true
docnav-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
