[package]
name = "docnav-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[dependencies]
docnav-adapter-contracts.workspace = true
docnav-protocol.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
