[package]
name = "docnav-output"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
docnav-diagnostics.workspace = true
docnav-json-io.workspace = true
docnav-protocol.workspace = true
docnav-readable.workspace = true
serde.workspace = true
serde_json.workspace = true
