[package]
name = "docnav"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "docnav"
path = "src/main.rs"

[dependencies]
clap.workspace = true
docnav-protocol.workspace = true
docnav-readable.workspace = true
serde.workspace = true
serde_json.workspace = true
