[package]
name = "docnav"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "docnav"
path = "src/main.rs"

[dependencies]
clap.workspace = true
docnav-adapter-contracts.workspace = true
docnav-cli-args.workspace = true
docnav-diagnostics.workspace = true
docnav-json-io.workspace = true
docnav-markdown.workspace = true
docnav-navigation.workspace = true
docnav-output.workspace = true
docnav-parameter-resolution.workspace = true
docnav-protocol.workspace = true
docnav-typed-fields.workspace = true
serde.workspace = true
serde_json.workspace = true
