[package]
name = "cli-config-resolution-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Clap argument integration for cli-config-resolution"
readme = "README.md"

[dependencies]
clap = { workspace = true, features = ["string"] }
cli-config-resolution.workspace = true

[dev-dependencies]
cli-config-resolution-serde.workspace = true
serde_json.workspace = true
