[package]
name = "cli-config-resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework-independent field and source resolution for Rust CLI configuration"
readme = "README.md"

[dependencies]
docnav-typed-fields.workspace = true
serde_json.workspace = true
