[package]
name = "docnav-typed-fields-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro support for canonical docnav-typed-fields declarations"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
