[package]
name = "docnav-typed-fields"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical field definitions, validation, and typed materialization for Rust configuration"
readme = "README.md"

[dependencies]
regex.workspace = true
serde_json.workspace = true

[dev-dependencies]
trybuild = "1.0"
